--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="alotrade, buyurtma, savdo, online savdo, yetkazib berish, alo, trade, sale, "
     />
+    <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Alo Shop</title>
+    <title>AloTrade</title>
   </head>
   <body>
     <div id="root"></div>
