--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="alotrade, buyurtma, savdo, online savdo, yetkazib berish, alo, trade, sale, "
+      content="Buyurtma bering va eng arzon narxlarda mahsulotlarga ega bo'ling. Mahsulot yoki xizmatlar buyurtmasi. Korxona, tashkilot, va jismoniy shaxslar uchun"
     />
     <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AloTrade</title>
+    <title>AloTrade - Online bozor. Buyurtma bering va sotuvchilarning o'zi siz bilan bog'lanadi. Korxona, tashkilot va yuridik va jismoniy shaxslarning tovar almashinuv platformasi</title>
   </head>
   <body>
     <div id="root"></div>
