--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="canonical" href="" />
     <title>AloTrade - Online bozor. Buyurtma bering va sotuvchilarning o'zi siz bilan bog'lanadi. Korxona, tashkilot va yuridik va jismoniy shaxslarning tovar almashinuv platformasi</title>
   </head>
   <body>
