--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Buyurtma bering va eng arzon narxlarda mahsulotlarga ega bo'ling. Mahsulot yoki xizmatlar buyurtmasi. Korxona, tashkilot, va jismoniy shaxslar uchun"
     />
-<!--    <meta name="robots" content="index, follow" />-->
+    <meta name="robots" content="index, follow" />
 
     <meta property="og:title" content="Buyurtmalar sayti, buyurtma berish. O‘zbekistonning bepul buyurtmalar sayti - mahsulot va xizmatlarni sotish/sotib olish alotrade.uz da"/>
     <meta property="og:description" content="Миллионы частных объявлений о купле-продаже в твоем городе. Продается всё!"/>
