--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/alologo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Buyurtma bering va eng arzon narxlarda mahsulotlarga ega bo'ling. Mahsulot yoki xizmatlar buyurtmasi. Korxona, tashkilot, va jismoniy shaxslar uchun"
@@ -18,7 +17,6 @@
     <meta property="og:site_name" content="бесплатные заказы"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="" />
     <title>AloTrade - Online bozor. Buyurtma bering va sotuvchilarning o'zi siz bilan bog'lanadi. Korxona, tashkilot va yuridik va jismoniy shaxslarning tovar almashinuv platformasi</title>
   </head>
