--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/alologo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/alologo" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
