--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="canonical" href="" />
-    <title>AloTrade - Online bozor. Buyurtma bering va sotuvchilarning o'zi siz bilan bog'lanadi. Korxona, tashkilot va yuridik va jismoniy shaxslarning tovar almashinuv platformasi</title>
+    <title>AloTrade - Международная электронная торговая площадка для B2B продажи</title>
   </head>
   <body>
     <div id="root"></div>
