--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/alologo" />
+    <link rel="icon" href="alotrade.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -10,15 +10,22 @@
     />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="Buyurtmalar sayti, buyurtma berish. O‘zbekistonning bepul buyurtmalar sayti - mahsulot va xizmatlarni sotish/sotib olish alotrade.uz da"/>
-    <meta property="og:description" content="Миллионы частных объявлений о купле-продаже в твоем городе. Продается всё!"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.alotrade.uz"/>
-    <meta property="og:site_name" content="бесплатные заказы"/>
+    <meta
+      property="og:title"
+      content="Buyurtmalar sayti, buyurtma berish. O‘zbekistonning bepul buyurtmalar sayti - mahsulot va xizmatlarni sotish/sotib olish alotrade.uz da"
+    />
+    <meta
+      property="og:description"
+      content="Миллионы частных объявлений о купле-продаже в твоем городе. Продается всё!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.alotrade.uz" />
+    <meta property="og:site_name" content="бесплатные заказы" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="canonical" href="" />
-    <title>AloTrade - Международная электронная торговая площадка для B2B продажи</title>
+    <title>
+      AloTrade - Международная электронная торговая площадка для B2B продажи
+    </title>
   </head>
   <body>
     <div id="root"></div>
